Fix dropdown caret overlapping the title on mobile

--- a/src/components/Dropdown/Dropdown.css
+++ b/src/components/Dropdown/Dropdown.css
@@ -70,12 +70,16 @@
 
 
 /* Mobile breakpoints */
-@media only screen and (max-width: 512px) {
+@media only screen and (max-width: 850px) {
     .dropdown__header__caret {
         left: 1rem;
     }
     .dropdown__content__item {
         list-style: none;
+    }
+    .dropdown__header__title {
+        width: 80%;
+        margin-left: 3rem;
     }
 }
 
